--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!--Шапка сайту-->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header__nav">
           <a class="header__logo logo link" href="./index.html"
@@ -62,7 +62,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <!--Герой-->
     <main>
@@ -434,7 +434,7 @@
           </ul>
         </div>
       </section>
-
+      <!-- Постійні клієнти -->
       <section class="clients section">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
@@ -487,7 +487,7 @@
     </main>
 
     <!--Футер-->
-    <footer class="footer__section">
+    <!-- <footer class="footer__section">
       <div class="container">
         <div class="contact__footer">
           <a class="logo link" href="./index.html"
@@ -572,7 +572,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <script src="./js/modal.js"></script>
     <script>
